[gd_scene load_steps=9 format=3 uid="uid://c3ordkbr6lfu6"]

[ext_resource type="Script" uid="uid://b3s2cxci6cciu" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/ResourceContainer/parts/MoneyDetails/money_details.gd" id="1_eybim"]
[ext_resource type="LabelSettings" uid="uid://bhvjm3opd1txx" path="res://Fonts/game/label_small.tres" id="1_fywvl"]
[ext_resource type="PackedScene" uid="uid://colip2v06wa01" path="res://UI/Buttons/DetailBtn/DetailBtn.tscn" id="2_hyts2"]
[ext_resource type="FontFile" uid="uid://gev2kme45ctq" path="res://Fonts/Mx437_Portfolio_6x8.ttf" id="3_5sbpa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yqr41"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_856mg"]
color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_e8fkm"]
font = ExtResource("3_5sbpa")
font_size = 8
font_color = Color(1, 0.635294, 0.203922, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_py0a5"]
color = Color(0.054902, 0.054902, 0.054902, 0.796078)
grow_begin = -12.0
vertical = true

[node name="MoneyDetails" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxEmpty_yqr41")
script = ExtResource("1_eybim")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "money"
label_settings = ExtResource("1_fywvl")
uppercase = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxLine_856mg")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "INCOME:"
label_settings = ExtResource("1_fywvl")
uppercase = true

[node name="TotalIncome" type="Label" parent="VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "99"
label_settings = ExtResource("1_fywvl")
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "EXPENSES:"
label_settings = ExtResource("1_fywvl")
uppercase = true

[node name="TotalExpense" type="Label" parent="VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "99"
label_settings = SubResource("LabelSettings_e8fkm")
horizontal_alignment = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "NET DIFFERENCE:"
label_settings = ExtResource("1_fywvl")
uppercase = true

[node name="TotalDiff" type="Label" parent="VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "999"
label_settings = ExtResource("1_fywvl")
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="IncomeContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/IncomeContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/IncomeContainer/HBoxContainer"]
layout_mode = 2
text = "Income"
label_settings = ExtResource("1_fywvl")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer/IncomeContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxLine_856mg")

[node name="IncomeList" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/IncomeContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="DetailBtn2" parent="VBoxContainer/HBoxContainer/IncomeContainer/IncomeList" instance=ExtResource("2_hyts2")]
layout_mode = 2
title = "Item A"
amount = 99
icon = 30

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_py0a5")

[node name="ExpenseContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/ExpenseContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/ExpenseContainer/HBoxContainer"]
layout_mode = 2
text = "Expenses"
label_settings = ExtResource("1_fywvl")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/HBoxContainer/ExpenseContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxLine_856mg")

[node name="ExpenseList" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/ExpenseContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="DetailBtn" parent="VBoxContainer/HBoxContainer/ExpenseContainer/ExpenseList" instance=ExtResource("2_hyts2")]
layout_mode = 2
title = "Item A"
amount = 99
icon = 30
